compiler/tests/fail/array_expansion/x86-64/type_mismatch_param_sub.jazz
fn f (reg u64[4] r) -> reg u64 {
  reg u64 res;
  res = r[0];
  return res;
}

export fn main () -> reg u64 {
  reg u32[8] r;
  reg u64 res;

  res = f(r[0:8]);

  return res;
}
